# MT-OPMNet

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  setup.py
configs/: default.json
scripts/: export_figures.py  latex_figures.tex
src/: __init__.py  channel_model.py  dataset.py  evaluate.py  losses.py  model.py  models.py  trainer.py  utils.py
